# enterprise-ai-knowledge

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CODEX_OPENCODE_MIGRATION.md  CODEX_OPENCODE_USAGE.md  PROGRESS.txt  README.en.md  README.md  auth.json  config.toml  enterprise-ai-knowledge-base.md  opencode.json  tasks.json  technical-proposal.md  ui-demo.html
backend/: Dockerfile  pyproject.toml
backend/scripts/: bootstrap_admin.py  validate_env.py
backend/src/app/: bootstrap.py  config.py  db.py  deps.py  env_validation.py  main.py  models.py  security.py  upload_validation.py
backend/src/app/ai/: __init__.py  chat_service.py  router.py  sanitizer.py
backend/src/app/indexing/: __init__.py  chunker.py  embedding.py  retrieval.py  tasks.py
backend/src/app/permissions/: __init__.py  service.py
backend/src/app/routers/: admin.py  auth.py  (+4 more)
backend/tests/: conftest.py  test_auth_flow.py  test_compose_services.py  test_env_validation.py  test_healthcheck.py  test_production_baseline.py  test_production_delivery_artifacts.py  test_runtime_config_artifacts.py  test_upload_flow.py  test_upload_versions_api.py
backend/tests/admin/: test_admin_state_endpoints.py  test_role_guard.py
backend/tests/chat/: test_ai_router_retry_failover.py  test_chat_sse_with_citations.py  test_outbound_payload_sanitization.py  test_public_query_exact_match_cache.py
backend/tests/editing/: test_onlyoffice_editing.py
backend/tests/indexing/: test_pipeline_lifecycle.py
backend/tests/permissions/: test_governance.py
backend/tests/retrieval/: test_rrf_query.py
(+134 files in other folders)
