[project]
name = "kb-backend"
version = "2.1.0"
description = "Runtime scaffold backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "PyJWT>=2.9.0",
    "SQLAlchemy>=2.0.36",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
